[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drissionpage-mcp"
version = "0.1.0"
description = "A powerful, context-friendly MCP server for DrissionPage browser automation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "RezoxP" }
]
keywords = [
  "drissionpage",
  "mcp",
  "model-context-protocol",
  "browser-automation",
  "web-scraping",
  "ai-agents"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Software Development :: Testing"
]
dependencies = [
  "DrissionPage>=4.1.0.18",
  "mcp>=1.10.0",
  "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
drissionpage-mcp = "drissionpage_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/drissionpage_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
